--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@types/node": "12.0.0",
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
+    "@types/react-router-dom": "^4.3.3",
+    "materialize-css": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-materialize": "^3.3.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "typescript": "3.4.5"
   },
@@ -32,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^0.14.2"
   }
 }
